--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.8",
@@ -15,9 +16,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
-    "js-image-zoom": "^0.7.0",
+    "crypto-js": "^4.1.1",
+    "javascript-time-ago": "^2.3.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-material-ui-carousel": "^3.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
