--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/apps.googleusercontent.com.json
 
 npm-debug.log*
 yarn-debug.log*
@@ -25,3 +26,9 @@ yarn-error.log*
 
 # vscode
 /.vscode
+
+#mp3
+/public/mp3
+
+#todo
+todo.txt
