--- a/Admin-ECommerce/package.json
+++ b/Admin-ECommerce/package.json
@@ -50,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "engines": {
+    "node": "16.13.1",
+    "npm": "8.3.0"
+  }  
 }
