--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build": "npm run production-build",
     "heroku-postbuild": "(NPM_CONFIG_PRODUCTION=false); (npm install --prefix ./Client-ECommerce && npm run build ./Client-ECommerce); (npm install --prefix ./Admin-ECommerce && npm run build ./Admin-ECommerce)",
     "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build",
     "production-build": "cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build"
