--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -12,9 +12,6 @@
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "crypto-js": "^4.1.1",
     "javascript-time-ago": "^2.3.13",
@@ -29,6 +26,11 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
