--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "nodemon index.js",
     "build": "npm run production-build",
     "heroku-postbuild": "(NPM_CONFIG_PRODUCTION=false); (npm install --prefix ./Client-ECommerce && npm run build ./Client-ECommerce); (npm install --prefix ./Admin-ECommerce && npm run build ./Admin-ECommerce)",
-    "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build",
-    "production-build": "npm install && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build"
+    "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && npm install --omit=dev && cd Client-ECommerce && npm install --omit=dev && npm run build && cd .. && cd Admin-ECommerce && npm install --omit=dev && npm run build",
+    "production-build": "npm install --omit=dev && cd Client-ECommerce && npm install --omit=dev && npm run build && cd .. && cd Admin-ECommerce && npm install --omit=dev && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -28,8 +28,10 @@
     "mongoose": "^6.1.3",
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
-    "nodemon": "^2.0.15",
     "stripe": "^8.194.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
