--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "dev": "nodemon index.js",
     "build": "npm run production-build",
     "heroku-postbuild": "(NPM_CONFIG_PRODUCTION=false); (npm install --prefix ./Client-ECommerce && npm run build ./Client-ECommerce); (npm install --prefix ./Admin-ECommerce && npm run build ./Admin-ECommerce)",
-    "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && npm install --omit=dev && cd Client-ECommerce && npm install --omit=dev && npm run build && cd .. && cd Admin-ECommerce && npm install --omit=dev && npm run build",
-    "production-build": "npm install --omit=dev && cd Client-ECommerce && npm install --omit=dev && npm run build && cd .. && cd Admin-ECommerce && npm install --omit=dev && npm run build"
+    "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && npm run production-build",
+    "production-build": "npm install && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
