update vite config to build into /build folder and create separate chunks for each of dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development.*
+.env.test.*
+.env.production.*
 node_modules
 .vscode
 yarn.lock
 mp3
 readme.txt
 build/
+dist/
 package-lock.json
 yarn.lock
