--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "start": "node index.js",
-    "start:production": "NODE_ENV=production node index.js",
+    "start:production": "cross-env NODE_ENV=production node index.js",
     "dev": "nodemon index.js",
     "build": "npm run production-build",
     "heroku-postbuild": "(NPM_CONFIG_PRODUCTION=false); (npm install --prefix ./Client-ECommerce && npm run build ./Client-ECommerce); (npm install --prefix ./Admin-ECommerce && npm run build ./Admin-ECommerce)",
     "railway-build": "export NODE_OPTIONS=--openssl-legacy-provider && CI=false && npm run production-build",
-    "production-build": "npm install && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build"
+    "production-build": "npm install --omit=dev && cd Client-ECommerce && npm install && npm run build && cd .. && cd Admin-ECommerce && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
@@ -32,7 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.15"
   }
 }
