--- a/package.json
+++ b/package.json
@@ -33,7 +33,18 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-rulesdir": "^0.2.2",
+    "eslint-plugin-spellcheck": "^0.0.20",
+    "globals": "^15.13.0",
     "nodemon": "^2.0.15"
   }
 }
