--- a/Admin-ECommerce/package.json
+++ b/Admin-ECommerce/package.json
@@ -34,8 +34,10 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:prettier/recommended"
     ]
   },
   "browserslist": {
