--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -38,8 +38,10 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:prettier/recommended"
     ]
   },
   "browserslist": {
