--- a/.eslintrc
+++ b/.eslintrc
@@ -2,26 +2,37 @@
 	"env": {
 	  "browser": true,
 	  "es2020": true,
-	  "node": true
+	  "node": true,
+	  "commonjs": true,
+	  "jquery": true,	  
+	  "react": true
 	},
 	"extends": [
 	  "eslint:recommended",
 	  "plugin:react/recommended",
 	  "plugin:react-hooks/recommended",
-	  "plugin:prettier/recommended"
+	  "plugin:prettier/recommended",
+	  "prettier", 
+	  "prettier/react"
 	],
+	"parser": "@babel/eslint-parser",
 	"parserOptions": {
 	  "ecmaFeatures": {
 		"jsx": true
 	  },
 	  "ecmaVersion": 12,
-	  "sourceType": "module"
+	  "sourceType": "module",
+	  "requireConfigFile": false,
+	  "babelOptions": {
+		"presets": ["@babel/preset-react"]
+	  }	  
 	},
 	"plugins": [
 	  "react",
 	  "react-hooks",
 	  "import",
-	  "prettier"
+	  "prettier",
+	  "spellcheck"
 	],
 	"ignorePatterns": ["node_modules/**", "dist/**", "build/**"], // Use ignorePatterns for ignored directories
 	"overrides": [
