--- a/Admin-ECommerce/package.json
+++ b/Admin-ECommerce/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecommerce-admin",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "recharts": "^2.1.8",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "web-vitals": "^2.1.2"
   },
   "devDependencies": {
