--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ecommerce-client",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -24,6 +25,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
+    "vite-plugin-node-polyfills": "^0.23.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
