--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -14,6 +14,8 @@
     "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.1.1",
     "javascript-time-ago": "^2.3.13",
     "react": "^17.0.2",
@@ -24,6 +26,7 @@
     "react-router-dom": "^6.2.1",
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.3",
     "vite-plugin-node-polyfills": "^0.23.0",
     "web-vitals": "^1.0.1"
