--- a/Client-ECommerce/package.json
+++ b/Client-ECommerce/package.json
@@ -13,6 +13,7 @@
     "@mui/styles": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "crypto": "npm:crypto-browserify",
     "crypto-js": "^4.1.1",
     "javascript-time-ago": "^2.3.13",
     "react": "^17.0.2",
@@ -23,13 +24,18 @@
     "react-router-dom": "^6.2.1",
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
+    "stream": "npm:stream-browserify",
     "styled-components": "^5.3.3",
+    "util": "npm:util",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^3.1.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "vite": "^5.4.1"
+    "crypto-browserify": "^3.12.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
+    "vite": "^4.5.9"
   },
   "scripts": {
     "start": "vite",
@@ -57,6 +63,6 @@
     ]
   },
   "engines": {
-    "node": "16.13.1"
+    "node": "16"
   }
 }
