--- a/.eslintrc
+++ b/.eslintrc
@@ -4,16 +4,14 @@
 	  "es2020": true,
 	  "node": true,
 	  "commonjs": true,
-	  "jquery": true,	  
-	  "react": true
+	  "jquery": true
 	},
 	"extends": [
 	  "eslint:recommended",
 	  "plugin:react/recommended",
 	  "plugin:react-hooks/recommended",
 	  "plugin:prettier/recommended",
-	  "prettier", 
-	  "prettier/react"
+	  "prettier"
 	],
 	"parser": "@babel/eslint-parser",
 	"parserOptions": {
