--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-react": "^7.26.3",
     "axios": "^0.24.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
